[package]
name = "crab_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
chrono = "0.4.19"
tokio = { version = "1.20.1", features = ["full"] }
serde_urlencoded = "0.7.1"
image = "0.24.3"
regex = "1.6.0"